--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,10 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   shared_preferences: ^2.1.1
-  shimmer: ^2.0.0
-  video_player: ^2.6.1
-  flutter_displaymode: ^0.5.0
   get_it: ^8.0.3
   internet_connection_checker:
   flutter_rating_bar: ^4.0.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +75,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/icons/
     - .env
 
 #   To add assets to your application, add an assets section, like this:
